--- a/css/styles.css
+++ b/css/styles.css
@@ -5,7 +5,12 @@
     box-sizing: border-box;
 }
 
+html{
+    font-size: 90%; /* Reduz para 14.4px (90% de 16px) */
+
+}
 /* Estilos globais */
+
 body {
     font-family: Arial, sans-serif;
     background-color: #f9f9f9;
@@ -18,7 +23,24 @@ body {
 a {
     text-decoration: none;
     color: inherit;
+    color:white
 }
+
+a.nav-link {
+    text-decoration: none;
+    color: inherit;
+    color:white
+}
+
+
+a.nav-link:hover {
+    color:rgb(239, 243, 240)
+}
+
+a.nav-link:focus {
+    color:rgb(211, 224, 28)
+}
+
 
 button {
     cursor: pointer;
@@ -56,7 +78,6 @@ button {
 
 .nav-link {
     font-size: 1rem;
-    color: #fff;
     padding: 0.5rem 1rem;
     border-radius: 4px;
     transition: background-color 0.3s;
@@ -66,6 +87,11 @@ button {
     background-color: #00509e;
 }
 
+.nav-link:focus {
+    background-color: #00509e;
+}
+
+
 /* Views */
 .view {
     display: none;
@@ -74,7 +100,7 @@ button {
 
 /* Views - Esse e o efeito de caixa sommpbreada oara views e forms*/
 .view-container {
-    max-width: 600px; 
+    max-width: 800px; 
     margin: 0 auto; 
     padding: 0;
     background-color: #fff;
@@ -265,6 +291,24 @@ button {
     font-size: 0.9rem;
 }
 
+/* Certifique-se de que o contêiner da página ocupe toda a altura da tela */
+.page-container {
+
+    flex-direction: column;
+    min-height: 100vh; /* Altura mínima igual à altura da janela */
+  }
+  
+  /* O conteúdo principal cresce para preencher o espaço disponível */
+  .content {
+    flex: 1; /* Faz o conteúdo expandir para ocupar o espaço restante */
+  }
+  
+  /* Estilização básica para o footer */
+  .footer {
+    background-color: #f8f9fa; /* Cor de fundo do footer */
+    padding: 10px 20px; /* Espaçamento interno */
+    text-align: center; /* Centraliza o texto */
+  }
 /* Responsividade */
 @media (max-width: 768px) {
     #summary {
